Bug 123643 - FILEOPEN | DOCX, Hyperlink on textbox missing in LO
Summary: FILEOPEN | DOCX, Hyperlink on textbox missing in LO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.2.1 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: DOCX-Textbox Hyperlink DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-02-22 09:48 UTC by NISZ LibreOffice Team
Modified: 2021-08-15 05:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (17.77 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-02-22 09:49 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer. (185.91 KB, image/png)
2019-02-22 09:49 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-02-22 09:48:50 UTC
Description:
Hyperlink on textbox in docx goes missing when file is opened in LO.

Steps to Reproduce:
    1. Create a docx in MSO.
    2. Insert a Textbox: Insert→ Textbox.
    3. Select the Box→ Insert→ Hyperlink→ Adress: https://libreoffice.org
    4. Save and exit the file.
    5. Open the file in LO.
    6. Try Ctrl-clicking on the Box, and view the Navigator.

Actual Results:
Ctrl-clicking only selects the Box and there are no Hyperlinks in the Navigator.

Expected Results:
Ctrl-clicking activates the Hyperlink and the Hyperlink is in the Navigator.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-02-22 09:49:13 UTC
Created attachment 149507 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-02-22 09:49:28 UTC
Created attachment 149508 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 3 Dieter 2019-02-22 10:26:28 UTC
I confirm it with

Version: 6.3.0.0.alpha0+ (x64)
Build ID: f42554a1886ebe49170c25096dc3281b2c7bb1f4
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-02-08_22:37:30
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 4 Dieter 2021-04-06 09:39:26 UTC
Still present in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: f96004096268f5e71120678e32fc8c74055819aa
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 5 Commit Notification 2021-08-05 07:01:30 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e12d4c7e361f449fcf143a61caed92129aca3468

tdf#123643 Import/Export for hyperlinks on text boxes

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2021-08-15 05:58:14 UTC
VERIFIED with

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 23f17b7ea6fbd2f422c7e40192ae60e4df25224c
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Samuel, thanks for fixing it!