oox/source/vml/vmlshape.cxx
@@ -745,6 +745,9 @@ Reference< XShape > SimpleShape::implConvertAndInsert( const Reference< XShapes 
         {
             PropertySet(xShape).setAnyProperty(PROP_WritingMode, uno::makeAny(nWritingMode));
         }
+        // tdf#123626
+        if (!maShapeModel.maHyperlink.isEmpty())
+            PropertySet(xShape).setAnyProperty(PROP_HyperLinkURL, makeAny(maShapeModel.maHyperlink));
     }
     else
     {
@@ -785,8 +788,8 @@ Reference< XShape > SimpleShape::implConvertAndInsert( const Reference< XShapes 
         PropertySet(xShape).setAnyProperty(PROP_TextVerticalAdjust, makeAny(eTextVerticalAdjust));
 
         // tdf#123626
-        if (!maTypeModel.maHyperlink.isEmpty())
-            PropertySet(xShape).setAnyProperty(PROP_Hyperlink, makeAny(maTypeModel.maHyperlink));
+        if (!maShapeModel.maHyperlink.isEmpty())
+            PropertySet(xShape).setAnyProperty(PROP_Hyperlink, makeAny(maShapeModel.maHyperlink));
 
         PropertySet(xShape).setAnyProperty(PROP_TextAutoGrowHeight,
                                            makeAny(maTypeModel.mbAutoHeight));
